[gd_scene load_steps=4 format=3 uid="uid://c2sriee835w48"]

[ext_resource type="Script" uid="uid://bjt2wu5ichk8g" path="res://scripts/UI/start.gd" id="1_j10re"]
[ext_resource type="FontFile" uid="uid://c5tvexykhe6fs" path="res://fonts/Ubuntu-Medium.ttf" id="2_jwxri"]

[sub_resource type="Theme" id="Theme_jl1vb"]
default_font = ExtResource("2_jwxri")
default_font_size = 27

[node name="Start" type="Node2D"]
script = ExtResource("1_j10re")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -83.0
offset_right = 98.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jl1vb")
text = "START"

[node name="Button2" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = 23.0
offset_right = 101.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_jl1vb")
text = "EXIT"

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = 118.0
offset_right = -83.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = 115.0
offset_right = 130.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
selected = 1
item_count = 4
popup/item_0/text = "1280 x 720"
popup/item_0/id = 0
popup/item_1/text = "1600 x 900"
popup/item_1/id = 1
popup/item_2/text = "1920 x 1080"
popup/item_2/id = 2
popup/item_3/text = "2560 x 1440"
popup/item_3/id = 3

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="item_selected" from="CanvasLayer/OptionButton" to="." method="_on_option_button_item_selected"]
